--- a/MyApplication/MyApplication/MainWindow.xaml
+++ b/MyApplication/MyApplication/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyApplication"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" ResizeMode="NoResize">
+        Title="MainWindow" Height="600" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <TabControl>
         <TabItem Header="Users">
             <Grid Background="#FFE5E5E5" Width="800">
