--- a/MyApplication/MyApplication/UI/FurnitureTypeWindow.xaml
+++ b/MyApplication/MyApplication/UI/FurnitureTypeWindow.xaml
@@ -5,21 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyApplication.UI"
         mc:Ignorable="d"
-        Title="FurnitureTypeWindow" Height="300" Width="400">
-    <Grid>
+        Title="FurnitureTypeWindow" Height="300" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
+    <Grid Background="MintCream">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="8*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="41*"/>
-            <RowDefinition Height="42*"/>
-            <RowDefinition Height="126*"/>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="23*"/>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="36*"/>
         </Grid.RowDefinitions>
-        <Label x:Name="lblId" Grid.Row="0" Grid.Column="0" Content="ID" HorizontalAlignment="Center" Margin="51,4,51.8,11.8" FontWeight="Bold" Width="22" VerticalAlignment="Center" Height="25"/>
-        <TextBox Padding="0" BorderThickness="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Row="0" Width="312" Grid.Column="1" HorizontalAlignment="Center" Name="tbId" Margin="11.2,2,9.6,10.8" Height="28" VerticalAlignment="Center"/>
-        <Label x:Name="lblName" Grid.Column="0" Content="Name" HorizontalAlignment="Center" Margin="41,8.2,40.8,8.2" FontWeight="Bold" Width="43" VerticalAlignment="Center" Height="26" Grid.Row="1"/>
-        <TextBox Padding="0" BorderThickness="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="312" Grid.Column="1" x:Name="tbName" Margin="10.2,8.2,10.6,6.2" Height="28" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="10,38.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="78"/>
+        <Label x:Name="lblId" Grid.Row="0" Grid.Column="0" Content="ID" HorizontalAlignment="Center" Margin="26,19,34.8,26.4" FontWeight="Bold" Width="68" VerticalAlignment="Center" Height="25" ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+        <TextBox Padding="0" BorderThickness="1" VerticalContentAlignment="Center" Grid.Row="0" Width="267" Grid.Column="1" HorizontalAlignment="Center" Name="tbId" Margin="10.2,19,67.6,16.4" Height="35" VerticalAlignment="Center" HorizontalScrollBarVisibility="Disabled" SelectionOpacity="0"/>
+        <Label x:Name="lblName" Grid.Column="0" Content="Name" HorizontalAlignment="Center" Margin="26,29.6,35.8,26" FontWeight="Bold" Width="67" VerticalAlignment="Center" Height="26" Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+        <TextBox Padding="0" BorderThickness="1" VerticalContentAlignment="Center" Width="266" Grid.Column="1" x:Name="tbName" Margin="11.2,20.6,67.6,26" Height="35" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalScrollBarVisibility="Disabled" SelectionOpacity="0"/>
+        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="9.4,36.2,0,20" Grid.Row="3" VerticalAlignment="Top" Width="95"/>
+        <Label x:Name="lblDeleted" Content="Deleted" HorizontalAlignment="Left" Height="25" Margin="23,10.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="67" FontWeight="Bold" ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+        <Button x:Name="btnCancel" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="142.4,36.2,0,20" Grid.Row="3" VerticalAlignment="Top" Width="95" IsCancel="True" Click="CloseWindow"/>
+        <CheckBox x:Name="cbDeleted" Content="Yes" Grid.Column="1" HorizontalAlignment="Left" Height="16" Margin="9.8,19.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="82"/>
     </Grid>
 </Window>
