--- a/MyApplication/MyApplication/MainWindow.xaml
+++ b/MyApplication/MyApplication/MainWindow.xaml
@@ -13,10 +13,10 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid x:Name="dgUsers" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0"/>
-                <Button x:Name="btnAddUser" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45"/>
-                <Button x:Name="btnEditUser" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45"/>
-                <Button x:Name="btnDeleteUser" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45"/>
+                <DataGrid x:Name="dgUsers" IsReadOnly="True" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgUsers_AutoGeneratingColumn"/>
+                <Button x:Name="btnAddUser" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddUser_Click"/>
+                <Button x:Name="btnEditUser" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditUser_Click"/>
+                <Button x:Name="btnDeleteUser" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteUser_Click"/>
             </Grid>
         </TabItem>
         <TabItem Header="Furniture types" Margin="-1.8,-2,-2,2" RenderTransformOrigin="0.5,0.5">
@@ -38,7 +38,7 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid x:Name="dgFurniture" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0"/>
+                <DataGrid IsReadOnly="True" x:Name="dgFurniture" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0"/>
                 <Button Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45"/>
                 <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45"/>
                 <Button Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45"/>
@@ -50,7 +50,7 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid x:Name="dgAdditionalService" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0"/>
+                <DataGrid IsReadOnly="True" x:Name="dgAdditionalService" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgAdditionalService_AutoGeneratingColumn"/>
                 <Button Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45"/>
                 <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45"/>
                 <Button Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45"/>
@@ -62,13 +62,11 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid x:Name="dgActionSales" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0"/>
-                <Button Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45"/>
-                <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45"/>
-                <Button Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45"/>
+                <DataGrid IsReadOnly="True" x:Name="dgActionSales" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgActionSales_AutoGeneratingColumn"/>
+                <Button Name="btnAddActionSale" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddActionSale_Click"/>
+                <Button Name="btnEditActionSale" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditActionSale_Click"/>
+                <Button Name="btnDeleteActionSale" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteActionSale_Click"/>
             </Grid>
         </TabItem>
     </TabControl>
-
-
 </Window>
